alignments fixed

--- a/flaskproject/static/addBook.css
+++ b/flaskproject/static/addBook.css
@@ -454,9 +454,7 @@ html {
     padding: 1% 2%;
     margin-left: 75%;
     margin-top: 2%;
-    border-radius: 7px;
-    background-color: aliceblue;
-    border: 1px solid rgba(0, 0, 0, 0.39);
+   
     
 }
 
